fix: Skin: Fixed secondary menubar styling for Ambiance (wrong colors) http://bugs.activestate.com/show_bug.cgi?id=100320
(integrated from komodo (trunk) change 81887 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13610 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/menus.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/menus.less
@@ -1,4 +1,5 @@
 @main-menu-appearance:                  menubar;
+@main-menu-background:                  disabled;
 @main-menu-item-appearance:             menuitem;
 
 @main-menu-item-color:                  disabled;
