--- a/src/modules/gtk_ambiance/skin/_config/menus.less
+++ b/src/modules/gtk_ambiance/skin/_config/menus.less
@@ -1,3 +1,4 @@
 @import url("chrome://komodo/skin/plat/current/_config/menus.less");
 
 @main-menu-appearance:                  none;
+@main-menu-background:                  -moz-linear-gradient(top, #3b3a36 0%, #56544C 100%);
